Exception Handler added for vehicle types. VehicleFeature CRUD wrote.